k8s/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app 
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
